@@ -4,6 +4,7 @@
   open Errors
   open Common
   open Boundedint
+  open Params
 }
 
 
@@ -135,9 +136,15 @@ and token_name buf = parse
                 if i >= 0x21 && i <= 0x7E then (
                   Buffer.add_char buf c;
                   token_name buf lexbuf
-                (* TODO : accept or not ? *)
-                ) else
-                  raise (Errors.LexingError (Printf.sprintf "non-ASCII character in name context : 0x%x" (int_of_char c), ~:(Lexing.lexeme_start lexbuf))) }
+                ) else (
+                  let error_msg = Printf.sprintf "non-ASCII character in name context : 0x%x" (int_of_char c) in
+                  if Params.global.Params.allow_nonascii_in_names then (
+                    Printf.eprintf "Warning : %s\n" error_msg;
+                    Buffer.add_char buf c;
+                    token_name buf lexbuf
+                  ) else
+                    raise (Errors.LexingError (error_msg, ~:(Lexing.lexeme_start lexbuf)))
+                ) }
   | eof
               { NAME (Buffer.contents buf) }
               (* TODO : check rewind function *)
