@@ -1,3 +1,7 @@
+New features:
+- Added --allow-nonascii-in-names option to allow names to contain non-ASCII
+  characters instead of the corresponding escape sequence.
+
 -------------------
 Version 0.2 (beta):
 -------------------
